fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -251,7 +251,6 @@ main .analyse > div .status{
 }
 
 main .analyse h3{
-    margin-left: 0.6rem;
     font-size: 1rem;
 }
 
@@ -533,6 +532,12 @@ main .recent-orders a{
     display: flex;
     align-items: center;
     gap: 0.6rem;
+}
+
+@media screen and (min-width: 1200px) {
+    main .analyse > div{
+        padding: 10px;
+    }
 }
 
 @media screen and (max-width: 1200px) {
